--- a/editor/index.html
+++ b/editor/index.html
@@ -7,9 +7,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
     <!-- CodeMirror -->
-    <script src="/libraries/codemirror.js"></script>
-    <script src="/libraries/codemirror-jsmode.js"></script>
-    <link rel="stylesheet" href="/libraries/codemirror.css">
+    <script src="../libraries/codemirror.js"></script>
+    <script src="../libraries/codemirror-jsmode.js"></script>
+    <link rel="stylesheet" href="../libraries/codemirror.css">
   </head>
   <body>
     <textarea id="editor"></textarea>
