--- a/editor/index.html
+++ b/editor/index.html
@@ -8,13 +8,17 @@
 
     <!-- CodeMirror -->
     <script src="../libraries/codemirror.js"></script>
-    <script src="../libraries/codemirror-jsmode.js"></script>
+    <script src="../libraries/codemirror-js-mode.js"></script>
+    <script src="../libraries/codemirror-active-line.js"></script>
     <link rel="stylesheet" href="../libraries/codemirror.css">
+    <link rel="stylesheet" href="../libraries/codemirror-solarized.css">
+
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <textarea id="editor"></textarea>
     <iframe id="canvas"></iframe>
-    <button type="button" id="runner">Run</button>
+    <button type="button" id="runner" class="dim">&#10148;</button>
 
     <script src="./index.js"></script>
   </body>
