--- a/editor/index.html
+++ b/editor/index.html
@@ -18,7 +18,7 @@
   <body>
     <textarea id="editor"></textarea>
     <iframe id="canvas"></iframe>
-    <button type="button" id="runner" class="dim">&#10148;</button>
+    <button type="button" id="runner">&#10148;</button>
 
     <script src="./index.js"></script>
   </body>
