--- a/editor/index.html
+++ b/editor/index.html
@@ -10,6 +10,7 @@
     <script src="../libraries/codemirror.js"></script>
     <script src="../libraries/codemirror-js-mode.js"></script>
     <script src="../libraries/codemirror-active-line.js"></script>
+    <script src="../libraries/codemirror-close-brackets.js"></script>
     <link rel="stylesheet" href="../libraries/codemirror.css">
     <link rel="stylesheet" href="../libraries/codemirror-solarized.css">
 
