--- a/editor/index.html
+++ b/editor/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <textarea id="editor"></textarea>
-    <iframe id="canvas"></iframe>
+    <iframe id="canvas" sandbox="allow-scripts allow-pointer-lock allow-same-origin allow-popups allow-forms allow-modals"></iframe>
     <button type="button" id="runner">&#10148;</button>
 
     <script src="./index.js"></script>
