Pull all libraries locally

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./libraries/codemirror.css">
     <link rel="stylesheet" href="./libraries/codemirror-solarized.css">
     <!-- Tachyons -->
-    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
+    <link rel="stylesheet" href="./libraries/tachyons.min.css">
     <!-- Processing -->
     <script src="./libraries/p5.min.js"></script>
     <script src="./libraries/p5.dom.min.js"></script>
@@ -75,7 +75,6 @@
           id="editor"
           class="fl w-100 vh-50">
         </textarea>
-        <!-- class="absolute z-max" style="top:calc(50% - 50px); right:10px;" -->
         <div id="controls" class="absolute z-max" style="left: 50%; margin-left: -138px; bottom: calc(50% + 10px);">
           <button
             id="runner"
