Add linting to the editor

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>Creative Coding Workshop</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <!-- CodeMirror -->
+    <script src="./libraries/jshint.js"></script>
     <script src="./libraries/codemirror.js"></script>
+    <script src="./libraries/codemirror-lint.js"></script>
     <script src="./libraries/codemirror-js-mode.js"></script>
     <script src="./libraries/codemirror-active-line.js"></script>
     <script src="./libraries/codemirror-close-brackets.js"></script>
+    <script src="./libraries/codemirror-javascript-lint.js"></script>
     <link rel="stylesheet" href="./libraries/codemirror.css">
+    <link rel="stylesheet" href="./libraries/codemirror-lint.css">
     <link rel="stylesheet" href="./libraries/codemirror-solarized.css">
     <!-- Tachyons -->
     <link rel="stylesheet" href="./libraries/tachyons.min.css">
