Position controls top and right

--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
           id="editor"
           class="fl w-100 vh-50">
         </textarea>
-        <div id="controls" class="absolute z-max" style="left: 50%; margin-left: -138px; bottom: calc(50% + 10px);">
+        <div id="controls" class="absolute z-max mt3 mr3 top-0 right-0">
           <button
             id="runner"
             class="f6 link dim ph3 pv2 dib white bg-hot-pink pointer"
-            type="button">
-              Run (⌘ + Enter)
+            type="button"
+            title="Run sketch (⌘ + Enter)">
+              Run
           </button>
           <button
             id="zenmode"
