Remove default borders from controls

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
         <div id="controls" class="absolute z-max mt3 mr3 top-0 right-0">
           <button
             id="runner"
-            class="f6 link dim ph3 pv2 dib white bg-hot-pink pointer"
+            class="f6 link dim ph3 pv2 dib white bg-hot-pink pointer bn"
             type="button"
             title="Run sketch (⌘ + Enter)">
               Run
           </button>
           <button
             id="zenmode"
-            class="f6 link dim ph3 pv2 dib white bg-hot-pink pointer"
+            class="f6 link dim ph3 pv2 dib white bg-hot-pink pointer bn"
             type="button">
               Zen mode
           </button>
