Keep the controls top-right of the editor

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           id="editor"
           class="fl w-100 vh-50">
         </textarea>
-        <div id="controls" class="absolute z-max mt3 mr3 top-0 right-0">
+        <div id="controls" class="absolute z-max mt3 mr3 top-0" style="right:0%">
           <button
             id="runner"
             class="f6 link dim ph3 pv2 dib white bg-hot-pink pointer bn"
