--- a/index.html
+++ b/index.html
@@ -22,11 +22,48 @@
     <script src="./libraries/p5.min.js"></script>
     <script src="./libraries/p5.dom.min.js"></script>
     <script src="./libraries/p5.sound.min.js"></script>
+    <!-- Custom styles -->
+    <style>
+      .bg-solarized-base03    { background-color: #002b36; }
+      .bg-solarized-base02    { background-color: #073642; }
+      .bg-solarized-base01    { background-color: #586e75; }
+      .bg-solarized-base00    { background-color: #657b83; }
+      .bg-solarized-base0     { background-color: #839496; }
+      .bg-solarized-base1     { background-color: #93a1a1; }
+      .bg-solarized-base2     { background-color: #eee8d5; }
+      .bg-solarized-base3     { background-color: #fdf6e3; }
+      .bg-solarized-yellow    { background-color: #b58900; }
+      .bg-solarized-orange    { background-color: #cb4b16; }
+      .bg-solarized-red       { background-color: #dc322f; }
+      .bg-solarized-magenta   { background-color: #d33682; }
+      .bg-solarized-violet    { background-color: #6c71c4; }
+      .bg-solarized-blue      { background-color: #268bd2; }
+      .bg-solarized-cyan      { background-color: #2aa198; }
+      .bg-solarized-green     { background-color: #859900; }
+
+      .solarized-base03       { color: #002b36; }
+      .solarized-base02       { color: #073642; }
+      .solarized-base01       { color: #586e75; }
+      .solarized-base00       { color: #657b83; }
+      .solarized-base0        { color: #839496; }
+      .solarized-base1        { color: #93a1a1; }
+      .solarized-base2        { color: #eee8d5; }
+      .solarized-base3        { color: #fdf6e3; }
+
+      .b--solarized-base03    { border-color: #002b36; }
+      .b--solarized-base02    { border-color: #073642; }
+      .b--solarized-base01    { border-color: #586e75; }
+      .b--solarized-base00    { border-color: #657b83; }
+      .b--solarized-base0     { border-color: #839496; }
+      .b--solarized-base1     { border-color: #93a1a1; }
+      .b--solarized-base2     { border-color: #eee8d5; }
+      .b--solarized-base3     { border-color: #fdf6e3; }
+    </style>
   </head>
-  <body class="code dark-gray">
+  <body class="code solarized-base03">
     <main class="cf">
-      <section id="gallery" class="fl w-50 vh-100 overflow-scroll bg-light-gray">
-        <section class="bg-light-green pa4 vh-50">
+      <section id="gallery" class="fl w-50 vh-100 overflow-scroll bg-solarized-base3">
+        <section class="pa4">
           <div class="pre lh-copy overflow-hidden">
 /**
  * Creative Coding with p5.js
@@ -40,7 +77,7 @@
  */
           </div>
         </section>
-        <section class="bg-light-blue pa4">
+        <section class="pa4">
           <div class="pre lh-copy overflow-hidden">
 // DRAWING
 // Making shapes.
@@ -51,7 +88,7 @@
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="003" src="./examples/003.png">
           </div>
         </section>
-        <section class="bg-light-red pa4">
+        <section class="pa4">
           <div class="pre lh-copy overflow-hidden">
 // INTERACTION
 // Adding behavior.
@@ -62,7 +99,7 @@
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="003" src="./examples/003.png">
           </div>
         </section>
-        <section class="bg-light-yellow pa4">
+        <section class="pa4">
           <div class="pre lh-copy overflow-hidden">
 // ANIMATION
 // Making things move.
@@ -74,7 +111,7 @@
           </div>
         </section>
       </section>
-      <section id="playground" class="fl w-50 vh-100 bg-light-gray relative">
+      <section id="playground" class="fl w-50 vh-100 bg-solarized-base2 relative">
         <textarea
           id="editor"
           class="fl w-100 vh-50">
@@ -82,14 +119,14 @@
         <div id="controls" class="absolute z-max mt3 mr3 top-0" style="right:0%">
           <button
             id="runner"
-            class="f6 link dim ph3 pv2 dib white bg-hot-pink pointer bn"
+            class="f6 link dim ph3 pv2 dib white bg-solarized-yellow pointer bn"
             type="button"
             title="Run sketch (⌘ + Enter)">
               ▶
           </button>
           <button
             id="zenmode"
-            class="f6 link dim ph3 pv2 dib white bg-hot-pink pointer bn"
+            class="f6 link dim ph3 pv2 dib white bg-solarized-yellow pointer bn"
             type="button">
               Zen mode
           </button>
