--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <body class="code solarized-base03">
     <main class="cf">
       <section id="gallery" class="fl w-50 vh-100 overflow-scroll bg-solarized-base3">
-        <section class="pa4">
+        <section class="pa4 pb0">
           <div class="pre lh-copy overflow-hidden">
 /**
  * Creative Coding with p5.js
@@ -80,14 +80,28 @@
         <section class="pa4">
           <div class="pre lh-copy overflow-hidden">
 // DRAWING
-// Making shapes.
+
+Drawing with code is a lot like drawing on a graph paper.
+You have a grid of points or *pixels* laid out on x and y
+axis. Each pixel is described by two properties: its
+position and color.
+
+In these examples, we'll explore drawing and coloring shapes.
           </div>
+          <img class="w-100 pa2 mv4 border-box ba" src="./shapes.png">
           <div class="cf">
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="001" src="./examples/001.png">
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="002" src="./examples/002.png">
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="003" src="./examples/003.png">
           </div>
+          <img class="w-100 pa2 mv4 border-box ba" src="./colors.png">
+          <div class="cf">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="004" src="./examples/004.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="005" src="./examples/005.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="006" src="./examples/006.png">
+          </div>
         </section>
+<!-- STUB
         <section class="pa4">
           <div class="pre lh-copy overflow-hidden">
 // INTERACTION
@@ -99,19 +113,9 @@
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="003" src="./examples/003.png">
           </div>
         </section>
-        <section class="pa4">
-          <div class="pre lh-copy overflow-hidden">
-// ANIMATION
-// Making things move.
-          </div>
-          <div class="cf">
-            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="001" src="./examples/001.png">
-            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="002" src="./examples/002.png">
-            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="003" src="./examples/003.png">
-          </div>
-        </section>
+-->
       </section>
-      <section id="playground" class="fl w-50 vh-100 bg-solarized-base2 relative">
+      <section id="playground" class="fl w-50 vh-100 relative">
         <textarea
           id="editor"
           class="fl w-100 vh-50">
