--- a/index.html
+++ b/index.html
@@ -101,19 +101,25 @@ In these examples, we'll explore drawing and coloring shapes.
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="006" src="./examples/006.png">
           </div>
         </section>
-<!-- STUB
         <section class="pa4">
           <div class="pre lh-copy overflow-hidden">
-// INTERACTION
-// Adding behavior.
+// REPETITION
+
+Using loops and variables, we can create repetitive shapes
+and make simple animations. These examples will explore
+how to create and update variables and how to repeat drawings
+with a *for* loop.
           </div>
           <div class="cf">
-            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="001" src="./examples/001.png">
-            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="002" src="./examples/002.png">
-            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="003" src="./examples/003.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="007" src="./examples/007.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="008" src="./examples/008.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="009" src="./examples/009.png">
+
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="010" src="./examples/010.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="011" src="./examples/011.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="012" src="./examples/012.png">
           </div>
         </section>
--->
       </section>
       <section id="playground" class="fl w-50 vh-100 relative">
         <textarea
