--- a/index.html
+++ b/index.html
@@ -120,6 +120,22 @@ with a *for* loop.
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="012" src="./examples/012.png">
           </div>
         </section>
+        <section class="pa4">
+          <div class="pre lh-copy overflow-hidden">
+// INTERACTION
+
+Sketches can take input from the mouse and keyboard.
+          </div>
+          <div class="cf">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="013" src="./examples/013.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="014" src="./examples/014.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="015" src="./examples/015.png">
+
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="016" src="./examples/016.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="017" src="./examples/017.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="018" src="./examples/018.png">
+          </div>
+        </section>
       </section>
       <section id="playground" class="fl w-50 vh-100 relative">
         <textarea
