--- a/index.html
+++ b/index.html
@@ -136,6 +136,19 @@ Sketches can take input from the mouse and keyboard.
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="018" src="./examples/018.png">
           </div>
         </section>
+        <section class="pa4">
+          <div class="pre lh-copy overflow-hidden">
+// TRANSFORMS
+
+Transforms let you translate, rotate and scale the
+coordinate system.
+          </div>
+          <div class="cf">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="019" src="./examples/019.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="020" src="./examples/020.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="021" src="./examples/021.png">
+          </div>
+        </section>
       </section>
       <section id="playground" class="fl w-50 vh-100 relative">
         <textarea
