--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@ coordinate system.
             <img class="fl w-third pa2 dim pointer border-box example-image" data-src="021" src="./examples/021.png">
           </div>
         </section>
+        <section class="pa4">
+          <div class="pre lh-copy overflow-hidden">
+// EXAMPLES
+          </div>
+          <div class="cf">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="022" src="./examples/022.png">
+            <img class="fl w-third pa2 dim pointer border-box example-image" data-src="023" src="./examples/023.png">
+          </div>
+        </section>
       </section>
       <section id="playground" class="fl w-50 vh-100 relative">
         <textarea
